--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   ],
   "license": "GPL-3.0",
   "dependencies": {
-    "isaac-typescript-definitions": "^1.0.392",
-    "isaacscript": "^1.2.37",
-    "isaacscript-common": "^1.2.275",
-    "isaacscript-lint": "^1.0.99"
+    "@types/node": "^18.6.3",
+    "isaac-typescript-definitions": "^3.2.3",
+    "isaacscript": "^2.10.0",
+    "isaacscript-common": "^7.1.1",
+    "isaacscript-lint": "^4.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
+    "typescript-to-lua": "^1.7.1"
   }
 }
